--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ BOT_DESCRIPTION=An AI-powered Discord bot that can help with various tasks
 BOT_PREFIX=!
 
 # AI Configuration
-OPENAI_API_KEY=YOUR_OPENAI_API_KEY_HERE
+OPENAI_API_KEY=YOUR_OPENAI_API_KEY_HERE # (avalibale only: GROQ, https://console.groq.com/keys )
 
 # Bot Status Settings
 STATUS_TYPE=watching
